backend/infra/k8s-dev/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '1200'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1200'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1200'
    nginx.ingress.kubernetes.io/send-timeout: '1200'

spec:
  rules:
    - host: vicara.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/files/?(.*)
            backend:
              serviceName: upload-srv
              servicePort: 3000
          - path: /api/folders/?(.*)
            backend:
              serviceName: upload-srv
              servicePort: 3000
          - path: /api/browse/?(.*)
            backend:
              serviceName: browse-srv
              servicePort: 3000
